[tool.poetry]
name = "keyv"
version = "0.1.2"
description = ""
authors = ["renanmoretto <himynameisrenan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
quote-style = "single"
