[tool.poetry]
name = "keyv"
version = "0.2.0"
description = "A lightweight, file-based NoSQL key-value database using sqlite3, designed for simple and practical uses without external dependencies."
authors = ["renanmoretto <himynameisrenan@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
quote-style = "single"
